feat: remove disabled hover effect

--- a/apps/ui-kit/src/lib/styles/index.css
+++ b/apps/ui-kit/src/lib/styles/index.css
@@ -68,6 +68,10 @@
         &:active::after {
             @apply opacity-12;
         }
+
+        &:disabled::after {
+            @apply opacity-0;
+        }
     }
 
     .state-layer {
