--- a/apps/explorer/src/index.css
+++ b/apps/explorer/src/index.css
@@ -83,7 +83,7 @@ body,
         }
     }
 
-    @screen xl {
+    @screen lg {
         .home-page-grid-container-top {
             @apply grid-cols-[315px,1fr,1fr];
             grid-template-areas:
@@ -108,13 +108,13 @@ body,
             'node-map';
     }
 
-    @screen lg {
+    @screen md {
         .home-page-grid-container-bottom {
             @apply gap-10;
         }
     }
 
-    @screen xl {
+    @screen lg {
         .home-page-grid-container-bottom {
             @apply grid grid-cols-2 gap-x-20 gap-y-10;
             grid-template-areas:
